Adjust background color

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -78,7 +78,7 @@ body {
 /* Type */
 
 	body {
-		background-color: #935d8c;
+		background-color: #277D6D;
 		color: rgba(255, 255, 255, 0.65);
 	}
 
